update homepage for gh pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-gql",
-  "homepage": "https://ryanderon.github.io/react-gql",
+  "homepage": "https://ryanderon.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
